*** empty log message ***
git-svn-id: http://microemu.googlecode.com/svn/trunk@470 272dc960-a678-11de-8dbb-b5444cbab91d